@@ -1,3 +1,9 @@
+2011-05-28  Thomas Fischl <tfischl@gmx.de>
+
+	Based on patch #7440 commited by Slawomir Fraś:
+	* usbasp.c: added TPI support for USBasp
+	* usbasp.h: (Ditto.)
+
 2011-05-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* avrdude.conf.in: Add support for ATmega168P.
